# Anka

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20230930_01_initial.py  20241001_01_add_audit_logs.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: allocations.py  assets.py  audit.py  auth.py  clients.py  dashboard.py  export.py  movements.py  users.py
backend/app/core/: cache.py  config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  allocation.py  asset.py  audit_log.py  client.py  movement.py  user.py
backend/app/schemas/: allocation.py  asset.py  audit.py  client.py  dashboard.py  movement.py  pagination.py  user.py
backend/app/seed/: sample_data.py
backend/app/services/: audit.py  dashboard_metrics.py  yahoo_finance.py
backend/app/utils/: pagination.py
backend/tests/: conftest.py  test_allocations.py  test_assets.py  test_audit.py  test_auth.py  test_clients.py  test_dashboard.py  test_market_data.py  test_movements.py  test_users.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(protected)/: layout.tsx
frontend/components/dashboard/: charts.tsx  clients-table.tsx  kpi-card.tsx
frontend/hooks/: use-auth.ts
frontend/lib/: axios.ts  types.ts  utils.ts
(+22 files in other folders)
